// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowTable Component should render correctly 1`] = `
<DocumentFragment>
  <div
    class="flow-table"
  >
    <table>
      <thead
        style="transform: translateY(0px);"
      >
        <tr>
          <th
            class="col-tls"
          >
            <span
              class="th-content"
            />
          </th>
          <th
            class="col-icon"
          >
            <span
              class="th-content"
            />
          </th>
          <th
            class="col-path sort-desc"
          >
            <span
              class="th-content"
            >
              Path
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down icon icon-chevronDown sort-indicator"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </th>
          <th
            class="col-method"
          >
            <span
              class="th-content"
            >
              Method
            </span>
          </th>
          <th
            class="col-status"
          >
            <span
              class="th-content"
            >
              Status
            </span>
          </th>
          <th
            class="col-size"
          >
            <span
              class="th-content"
            >
              Size
            </span>
          </th>
          <th
            class="col-time"
          >
            <span
              class="th-content"
            >
              Time
            </span>
          </th>
          <th
            class="col-quickactions"
          >
            <span
              class="th-content"
            />
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          style="height: 0px;"
        />
        <tr
          class="selected highlighted has-request has-response"
          style="height: 32px;"
        >
          <td
            class="col-tls col-tls-https"
            title="TLS encrypted"
          />
          <td
            class="col-icon"
            title="websocket"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-left-right icon icon-swap"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 3 4 7l4 4"
              />
              <path
                d="M4 7h16"
              />
              <path
                d="m16 21 4-4-4-4"
              />
              <path
                d="M20 17H4"
              />
            </svg>
          </td>
          <td
            class="col-path"
          >
            <svg
              class="lucide lucide-triangle-alert icon icon-warning float-right"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
              <title>
                error
              </title>
            </svg>
            <span
              class="marker float-right"
            />
            http://address:22/second
          </td>
          <td
            class="col-method"
          >
            <span
              class="badge method-badge"
            >
              WSS
            </span>
          </td>
          <td
            class="col-status"
          >
            <span
              class="badge status-badge status-2xx"
            >
              200
            </span>
          </td>
          <td
            class="col-size"
          >
            43b
          </td>
          <td
            class="col-time"
          >
            5s
          </td>
          <td
            class="col-quickactions"
          />
        </tr>
        <tr
          class=""
          style="height: 32px;"
        >
          <td
            class="col-tls col-tls-https"
            title="TLS encrypted"
          />
          <td
            class="col-icon"
            title="tcp"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-cable icon icon-cable"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 19a1 1 0 0 1-1-1v-2a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2a1 1 0 0 1-1 1z"
              />
              <path
                d="M17 21v-2"
              />
              <path
                d="M19 14V6.5a1 1 0 0 0-7 0v11a1 1 0 0 1-7 0V10"
              />
              <path
                d="M21 21v-2"
              />
              <path
                d="M3 5V3"
              />
              <path
                d="M4 10a2 2 0 0 1-2-2V6a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2a2 2 0 0 1-2 2z"
              />
              <path
                d="M7 5V3"
              />
            </svg>
          </td>
          <td
            class="col-path"
          >
            <svg
              class="lucide lucide-triangle-alert icon icon-warning float-right"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
              <title>
                error
              </title>
            </svg>
            <span
              class="marker float-right"
            />
            127.0.0.1:22 ↔ address:22
          </td>
          <td
            class="col-method"
          >
            <span
              class="badge method-badge"
            >
              TCP
            </span>
          </td>
          <td
            class="col-status"
          />
          <td
            class="col-size"
          >
            12b
          </td>
          <td
            class="col-time"
          >
            5s
          </td>
          <td
            class="col-quickactions"
          />
        </tr>
        <tr
          style="height: 64px;"
        />
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`FlowTable Component should scroll current selection into view 1`] = `
<DocumentFragment>
  <div
    style="height: 32px; overflow: hidden;"
  >
    <div
      class="flow-table"
    >
      <table>
        <thead
          style="transform: translateY(0px);"
        >
          <tr>
            <th
              class="col-tls"
            >
              <span
                class="th-content"
              />
            </th>
            <th
              class="col-icon"
            >
              <span
                class="th-content"
              />
            </th>
            <th
              class="col-path sort-desc"
            >
              <span
                class="th-content"
              >
                Path
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down icon icon-chevronDown sort-indicator"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="3"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </th>
            <th
              class="col-method"
            >
              <span
                class="th-content"
              >
                Method
              </span>
            </th>
            <th
              class="col-status"
            >
              <span
                class="th-content"
              >
                Status
              </span>
            </th>
            <th
              class="col-size"
            >
              <span
                class="th-content"
              >
                Size
              </span>
            </th>
            <th
              class="col-time"
            >
              <span
                class="th-content"
              >
                Time
              </span>
            </th>
            <th
              class="col-quickactions"
            >
              <span
                class="th-content"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            style="height: 0px;"
          />
          <tr
            class="selected highlighted has-request has-response"
            style="height: 32px;"
          >
            <td
              class="col-tls col-tls-https"
              title="TLS encrypted"
            />
            <td
              class="col-icon"
              title="websocket"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-left-right icon icon-swap"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 3 4 7l4 4"
                />
                <path
                  d="M4 7h16"
                />
                <path
                  d="m16 21 4-4-4-4"
                />
                <path
                  d="M20 17H4"
                />
              </svg>
            </td>
            <td
              class="col-path"
            >
              <svg
                class="lucide lucide-triangle-alert icon icon-warning float-right"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                />
                <path
                  d="M12 9v4"
                />
                <path
                  d="M12 17h.01"
                />
                <title>
                  error
                </title>
              </svg>
              <span
                class="marker float-right"
              />
              http://address:22/second
            </td>
            <td
              class="col-method"
            >
              <span
                class="badge method-badge"
              >
                WSS
              </span>
            </td>
            <td
              class="col-status"
            >
              <span
                class="badge status-badge status-2xx"
              >
                200
              </span>
            </td>
            <td
              class="col-size"
            >
              43b
            </td>
            <td
              class="col-time"
            >
              5s
            </td>
            <td
              class="col-quickactions"
            />
          </tr>
          <tr
            class=""
            style="height: 32px;"
          >
            <td
              class="col-tls col-tls-https"
              title="TLS encrypted"
            />
            <td
              class="col-icon"
              title="tcp"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-cable icon icon-cable"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 19a1 1 0 0 1-1-1v-2a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2a1 1 0 0 1-1 1z"
                />
                <path
                  d="M17 21v-2"
                />
                <path
                  d="M19 14V6.5a1 1 0 0 0-7 0v11a1 1 0 0 1-7 0V10"
                />
                <path
                  d="M21 21v-2"
                />
                <path
                  d="M3 5V3"
                />
                <path
                  d="M4 10a2 2 0 0 1-2-2V6a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2a2 2 0 0 1-2 2z"
                />
                <path
                  d="M7 5V3"
                />
              </svg>
            </td>
            <td
              class="col-path"
            >
              <svg
                class="lucide lucide-triangle-alert icon icon-warning float-right"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                />
                <path
                  d="M12 9v4"
                />
                <path
                  d="M12 17h.01"
                />
                <title>
                  error
                </title>
              </svg>
              <span
                class="marker float-right"
              />
              127.0.0.1:22 ↔ address:22
            </td>
            <td
              class="col-method"
            >
              <span
                class="badge method-badge"
              >
                TCP
              </span>
            </td>
            <td
              class="col-status"
            />
            <td
              class="col-size"
            >
              12b
            </td>
            <td
              class="col-time"
            >
              5s
            </td>
            <td
              class="col-quickactions"
            />
          </tr>
          <tr
            style="height: 64px;"
          />
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FlowTable Component should scroll current selection into view 2`] = `
<DocumentFragment>
  <div
    style="height: 32px; overflow: hidden;"
  >
    <div
      class="flow-table"
    >
      <table>
        <thead
          style="transform: translateY(128px);"
        >
          <tr>
            <th
              class="col-tls"
            >
              <span
                class="th-content"
              />
            </th>
            <th
              class="col-icon"
            >
              <span
                class="th-content"
              />
            </th>
            <th
              class="col-path sort-desc"
            >
              <span
                class="th-content"
              >
                Path
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down icon icon-chevronDown sort-indicator"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="3"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </th>
            <th
              class="col-method"
            >
              <span
                class="th-content"
              >
                Method
              </span>
            </th>
            <th
              class="col-status"
            >
              <span
                class="th-content"
              >
                Status
              </span>
            </th>
            <th
              class="col-size"
            >
              <span
                class="th-content"
              >
                Size
              </span>
            </th>
            <th
              class="col-time"
            >
              <span
                class="th-content"
              >
                Time
              </span>
            </th>
            <th
              class="col-quickactions"
            >
              <span
                class="th-content"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            style="height: 64px;"
          />
          <tr
            class=""
            style="height: 32px;"
          >
            <td
              class="col-tls col-tls-https"
              title="TLS encrypted"
            />
            <td
              class="col-icon"
              title="dns"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-globe icon icon-globe"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
                />
                <path
                  d="M2 12h20"
                />
              </svg>
            </td>
            <td
              class="col-path"
            >
              <svg
                class="lucide lucide-triangle-alert icon icon-warning float-right"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                />
                <path
                  d="M12 9v4"
                />
                <path
                  d="M12 17h.01"
                />
                <title>
                  error
                </title>
              </svg>
              <span
                class="marker float-right"
              />
              dns.google A = 8.8.8.8, 8.8.4.4
            </td>
            <td
              class="col-method"
            >
              <span
                class="badge method-badge"
              >
                QUERY
              </span>
            </td>
            <td
              class="col-status"
            >
              <span
                class="badge status-badge status-other"
              >
                NOERROR
              </span>
            </td>
            <td
              class="col-size"
            >
              8b
            </td>
            <td
              class="col-time"
            >
              1s
            </td>
            <td
              class="col-quickactions"
            />
          </tr>
          <tr
            class="selected"
            style="height: 32px;"
          >
            <td
              class="col-tls col-tls-https"
              title="TLS encrypted"
            />
            <td
              class="col-icon"
              title="udp"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-send icon icon-send"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </td>
            <td
              class="col-path"
            >
              <svg
                class="lucide lucide-triangle-alert icon icon-warning float-right"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                />
                <path
                  d="M12 9v4"
                />
                <path
                  d="M12 17h.01"
                />
                <title>
                  error
                </title>
              </svg>
              <span
                class="marker float-right"
              />
              127.0.0.1:22 ↔ address:22
            </td>
            <td
              class="col-method"
            >
              <span
                class="badge method-badge"
              >
                UDP
              </span>
            </td>
            <td
              class="col-status"
            />
            <td
              class="col-size"
            >
              12b
            </td>
            <td
              class="col-time"
            >
              5s
            </td>
            <td
              class="col-quickactions"
            />
          </tr>
          <tr
            style="height: 0px;"
          />
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
